Standardise all startup_timer, scheduled_start attributes as 'autostart_timer'

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -38,7 +38,7 @@
     "gui_share_stop_server": "Stop sharing",
     "gui_share_stop_server_autostop_timer": "Stop Sharing ({})",
     "gui_stop_server_autostop_timer_tooltip": "Auto-stop timer ends at {}",
-    "gui_start_server_startup_timer_tooltip": "Auto-start timer ends at {}",
+    "gui_start_server_autostart_timer_tooltip": "Auto-start timer ends at {}",
     "gui_receive_start_server": "Start Receive Mode",
     "gui_receive_stop_server": "Stop Receive Mode",
     "gui_receive_stop_server_autostop_timer": "Stop Receive Mode ({}s remaining)",
@@ -102,8 +102,8 @@
     "gui_settings_button_help": "Help",
     "gui_settings_autostop_timer_checkbox": "Use auto-stop timer",
     "gui_settings_autostop_timer": "Stop the share at:",
-    "gui_settings_startup_timer_checkbox": "Use auto-start timer",
-    "gui_settings_startup_timer": "Start the share at:",
+    "gui_settings_autostart_timer_checkbox": "Use auto-start timer",
+    "gui_settings_autostart_timer": "Start the share at:",
     "settings_error_unknown": "Can't connect to Tor controller because your settings don't make sense.",
     "settings_error_automatic": "Could not connect to the Tor controller. Is Tor Browser (available from torproject.org) running in the background?",
     "settings_error_socket_port": "Can't connect to the Tor controller at {}:{}.",
@@ -131,8 +131,8 @@
     "gui_tor_connection_lost": "Disconnected from Tor.",
     "gui_server_started_after_autostop_timer": "The auto-stop timer ran out before the server started. Please make a new share.",
     "gui_server_autostop_timer_expired": "The auto-stop timer already ran out. Please update it to start sharing.",
-    "gui_server_startup_timer_expired": "The scheduled time has already passed. Please update it to start sharing.",
-    "gui_autostop_timer_cant_be_earlier_than_startup": "The auto-stop time can't be the same or earlier than the start-up time. Please update it to start sharing.",
+    "gui_server_autostart_timer_expired": "The scheduled time has already passed. Please update it to start sharing.",
+    "gui_autostop_timer_cant_be_earlier_than_autostart_timer": "The auto-stop time can't be the same or earlier than the auto-start time. Please update it to start sharing.",
     "share_via_onionshare": "OnionShare it",
     "gui_connect_to_tor_for_onion_settings": "Connect to Tor to see onion service settings",
     "gui_use_legacy_v2_onions_checkbox": "Use legacy addresses",
