Rename "help_debug" string to "help_verbose"

--- a/share/locale/am.json
+++ b/share/locale/am.json
@@ -29,7 +29,7 @@
     "help_autostop_timer": "",
     "help_stealth": "",
     "help_receive": "",
-    "help_debug": "",
+    "help_verbose": "",
     "help_filename": "",
     "help_config": "",
     "gui_drag_and_drop": "",
