--- a/share/locale/ar.json
+++ b/share/locale/ar.json
@@ -28,7 +28,7 @@
     "help_autostop_timer": "أوقف المشاركة بعد ثواني محددة",
     "help_stealth": "",
     "help_receive": "",
-    "help_debug": "",
+    "help_verbose": "",
     "help_filename": "قائمة الملفات أو المجلدات للمشاركة",
     "help_config": "",
     "gui_drag_and_drop": "",
