--- a/share/locale/bg.json
+++ b/share/locale/bg.json
@@ -29,7 +29,7 @@
     "help_autostop_timer": "Спри споделянето след дадено количество секунди",
     "help_stealth": "Използвай клиент авторизация (напреднал)",
     "help_receive": "Получаване на дялове вместо изпращане",
-    "help_debug": "Протоколирай OnionShare грешки на stdout и уеб грешки на диск",
+    "help_verbose": "Протоколирай OnionShare грешки на stdout и уеб грешки на диск",
     "help_filename": "Списък на документи или папки за споделяне",
     "help_config": "Персонализирано местоположение на JSON конфигурационен файл (незадължително)",
     "gui_drag_and_drop": "Плъзнете и пуснете файлове и папки, \nза да започнете споделяне",
