--- a/share/locale/bn.json
+++ b/share/locale/bn.json
@@ -29,7 +29,7 @@
     "help_autostop_timer": "নির্দিষ্ট সেকেন্ডের পর শেয়ার করা বন্ধ করে দিও",
     "help_stealth": "ক্লায়েন্ট অনুমোদন ব্যবহার করুন (উন্নততর)",
     "help_receive": "কোনকিছু শেয়ার না করে শুধু গ্রহণ করবে",
-    "help_debug": "OnionShare-এর এররগুলো stdout-এ দেখাও, আর ওয়েব এররগুলো ডিস্কে লগ করো",
+    "help_verbose": "OnionShare-এর এররগুলো stdout-এ দেখাও, আর ওয়েব এররগুলো ডিস্কে লগ করো",
     "help_filename": "শেয়ার করার জন্য ফাইল বা ফোল্ডারের লিস্ট",
     "help_config": "কাস্টম JSON কনফিগারেশন ফাইলের লোকেশন (যদি থাকে)",
     "gui_drag_and_drop": "শেয়ার করা শুরু করতে\nফাইল এবং ফোল্ডারগুলো ড্র্যাগ করে ড্রপ করুন",
