--- a/share/locale/el.json
+++ b/share/locale/el.json
@@ -28,7 +28,7 @@
     "help_autostop_timer": "Να τερματιστεί ο διαμοιρασμός μετά από ένα συγκεκριμένο αριθμό δευτερολέπτων",
     "help_stealth": "Κάντε χρήση εξουσιοδότησης πελάτη (Για προχωρημένους)",
     "help_receive": "Λάβετε διαμοιρασμένα αρχεία αντι να τα στέλνετε",
-    "help_debug": "Κατέγραψε τα σφάλματα του OnionShare στο stdout (συνήθως οθόνη) και τα σφάλματα web στον δίσκο",
+    "help_verbose": "Κατέγραψε τα σφάλματα του OnionShare στο stdout (συνήθως οθόνη) και τα σφάλματα web στον δίσκο",
     "help_filename": "Λίστα αρχείων ή φακέλων για μοίρασμα",
     "help_config": "Ορίστε σημείο αποθήκευσης αρχείου JSON",
     "gui_drag_and_drop": "Σύρτε και αφήστε αρχεία και φακέλους\nγια να αρχίσετε να τα μοιράζεστε",
