--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -25,7 +25,7 @@
     "help_connect_timeout": "Give up connecting to Tor after a given amount of seconds (default: 120)",
     "help_stealth": "Use client authorization (advanced)",
     "help_receive": "Receive shares instead of sending them",
-    "help_debug": "Log OnionShare errors to stdout, and web errors to disk",
+    "help_verbose": "Log OnionShare errors to stdout, and web errors to disk",
     "help_filename": "List of files or folders to share",
     "help_config": "Custom JSON config file location (optional)",
     "gui_drag_and_drop": "Drag and drop files and folders\nto start sharing",
