--- a/share/locale/fa.json
+++ b/share/locale/fa.json
@@ -28,7 +28,7 @@
     "help_autostop_timer": "توقف به اشتراک گذاری پس از میزان ثانیه ای مشخص",
     "help_stealth": "استفاده از احراز هویت کلاینت (پیشرفته)",
     "help_receive": "دریافت اشتراک به جای ارسال آن",
-    "help_debug": "لاگ کردن خطاهای OnionShare روی stdout، و خطاهای وب بر روی دیسک",
+    "help_verbose": "لاگ کردن خطاهای OnionShare روی stdout، و خطاهای وب بر روی دیسک",
     "help_filename": "لیست فایل ها یا فولدر ها برای به اشتراک گذاری",
     "help_config": "مکان فایل کانفیگ JSON کاستوم (اختیاری)",
     "gui_drag_and_drop": "فایل ها و پوشه ها را بکشید و رها کنید\nتا اشتراک گذاری آغاز شود",
