--- a/share/locale/ru.json
+++ b/share/locale/ru.json
@@ -54,7 +54,7 @@
     "help_autostop_timer": "Остановить отправку после заданного количества секунд",
     "help_stealth": "Использовать авторизацию клиента (дополнительно)",
     "help_receive": "Получать загрузки вместо их отправки",
-    "help_debug": "Направлять сообщения об ошибках OnionShare в stdout, ошибки сети сохранять на диск",
+    "help_verbose": "Направлять сообщения об ошибках OnionShare в stdout, ошибки сети сохранять на диск",
     "help_filename": "Список файлов или папок для отправки",
     "help_config": "Расположение пользовательского конфигурационного JSON-файла (необязательно)",
     "gui_drag_and_drop": "Перетащите сюда файлы и/или папки,\nкоторые хотите отправить.",
