--- a/share/locale/cs.json
+++ b/share/locale/cs.json
@@ -11,7 +11,7 @@
     "help_local_only": "Nepoužívat Tor: jen pro vývoj",
     "help_stay_open": "Nechat běžet onion service po skončení stahování",
     "help_stealth": "Create stealth onion service (advanced)",
-    "help_debug": "Zaznamenat chyby na disk",
+    "help_verbose": "Zaznamenat chyby na disk",
     "help_filename": "Seznam souborů a složek ke sdílení",
     "gui_drag_and_drop": "Táhni a pusť\nsoubory sem",
     "gui_add": "Přidat",
