--- a/share/locale/eo.json
+++ b/share/locale/eo.json
@@ -11,7 +11,7 @@
     "help_local_only": "Ne strebu uzi tor: nur por evoluado",
     "help_stay_open": "Lasu onion service funkcii post fino de elŝuto",
     "help_stealth": "Create stealth onion service (advanced)",
-    "help_debug": "Protokoli erarojn sur disko",
+    "help_verbose": "Protokoli erarojn sur disko",
     "help_filename": "Listo de dosieroj aŭ dosierujoj por kundividi",
     "gui_drag_and_drop": "Ŝovu kaj metu\nla dosierojn ĉi tien",
     "gui_add": "Aldoni",
