--- a/share/locale/yo.json
+++ b/share/locale/yo.json
@@ -29,7 +29,7 @@
     "help_autostop_timer": "",
     "help_stealth": "",
     "help_receive": "",
-    "help_debug": "",
+    "help_verbose": "",
     "help_filename": "",
     "help_config": "",
     "gui_drag_and_drop": "",
