--- a/share/locale/pt_BR.json
+++ b/share/locale/pt_BR.json
@@ -6,9 +6,9 @@
     "give_this_url_receive": "Enviar este endereço à pessoa remetente:",
     "give_this_url_receive_stealth": "Dar este endereço e HidServAuth à pessoa remetente:",
     "ctrlc_to_stop": "Pressione Ctrl+C para interromper o servidor",
-    "not_a_file": "{0:s} não é um ficheiro válido.",
-    "not_a_readable_file": "{0:s} não é um ficheiro legível.",
-    "no_available_port": "Não foi possível encontrar um pórtico disponível para iniciar o serviço onion",
+    "not_a_file": "{0:s} não é um arquivo válido.",
+    "not_a_readable_file": "{0:s} não é um arquivo legível.",
+    "no_available_port": "Não foi possível encontrar uma porta disponível para iniciar o serviço onion",
     "other_page_loaded": "Endereço carregado",
     "close_on_autostop_timer": "Interrompido ao final da contagem do cronômetro automático",
     "closing_automatically": "Interrompido após o término da transferência",
@@ -58,7 +58,7 @@
     "gui_download_upload_progress_eta": "{0:s}, tempo estimado para término: {1:s}, %p%",
     "version_string": "OnionShare {0:s} | https://onionshare.org/",
     "gui_quit_title": "Mais devagar",
-    "gui_share_quit_warning": "O envio dos seus arquivos ainda não terminou . Você tem certeza de que quer sair de OnionShare?",
+    "gui_share_quit_warning": "O envio dos seus arquivos ainda não terminou. Você tem certeza de que quer sair de OnionShare?",
     "gui_receive_quit_warning": "O recebimento dos seus arquivos ainda não terminou. Você tem certeza de que quer sair do OnionShare?",
     "gui_quit_warning_quit": "Sair",
     "gui_quit_warning_dont_quit": "Cancelar",
@@ -72,32 +72,32 @@
     "gui_settings_stealth_hidservauth_string": "Após salvar a sua chave privada para reutilização, você pode clicar para copiar o seu HidServAuth.",
     "gui_settings_autoupdate_label": "Procurar a nova versão",
     "gui_settings_autoupdate_option": "Notificar-me quando uma nova versão estiver disponível",
-    "gui_settings_autoupdate_timestamp": "Última atualização: {}",
+    "gui_settings_autoupdate_timestamp": "Última verificação: {}",
     "gui_settings_autoupdate_timestamp_never": "Nunca",
     "gui_settings_autoupdate_check_button": "Procurar a nova versão",
     "gui_settings_general_label": "Configurações gerais",
-    "gui_settings_sharing_label": "Compartilhando configurações",
+    "gui_settings_sharing_label": "Configurações de compartilhar",
     "gui_settings_close_after_first_download_option": "Parar de compartilhar após o envio dos arquivos",
     "gui_settings_connection_type_label": "Como OnionShare normalmente conecta-se a Tor?",
     "gui_settings_connection_type_bundled_option": "Use a versão de Tor que vem junto com OnionShare",
     "gui_settings_connection_type_automatic_option": "Tentar configuração automática com o Navegador Tor",
-    "gui_settings_connection_type_control_port_option": "Conectar usando entrada de controle",
-    "gui_settings_connection_type_socket_file_option": "Conectar usando um ficheiro socket",
+    "gui_settings_connection_type_control_port_option": "Conectar usando porta de controle",
+    "gui_settings_connection_type_socket_file_option": "Conectar usando um arquivo socket",
     "gui_settings_connection_type_test_button": "Testar a conexão a Tor",
-    "gui_settings_control_port_label": "Entrada de controle",
-    "gui_settings_socket_file_label": "Ficheiro socket",
-    "gui_settings_socks_label": "Entrada SOCKS",
+    "gui_settings_control_port_label": "Porta de controle",
+    "gui_settings_socket_file_label": "Arquivo socket",
+    "gui_settings_socks_label": "Porta SOCKS",
     "gui_settings_authenticate_label": "Configurações de autenticação do Tor",
     "gui_settings_authenticate_no_auth_option": "Sem autenticação nem cookie de autenticação",
-    "gui_settings_authenticate_password_option": "Palavra-passe",
-    "gui_settings_password_label": "Palavra-passe",
-    "gui_settings_tor_bridges": "Ajuda para pontes Tor",
+    "gui_settings_authenticate_password_option": "Senha",
+    "gui_settings_password_label": "Senha",
+    "gui_settings_tor_bridges": "Suporte a pontes Tor",
     "gui_settings_tor_bridges_no_bridges_radio_option": "Não usar pontes",
     "gui_settings_tor_bridges_obfs4_radio_option": "Usar transportadores plugáveis obfs4 já instalados",
     "gui_settings_tor_bridges_obfs4_radio_option_no_obfs4proxy": "Usar transportadores plugáveis obfs4 já instalados (requer obfs4proxy)",
     "gui_settings_tor_bridges_meek_lite_azure_radio_option": "Usar transportadores plugáveis meek_lite (Azure) instalados",
     "gui_settings_tor_bridges_meek_lite_azure_radio_option_no_obfs4proxy": "Usar transportadores plugáveis meek_lite (Azure) instalados (requer obfs4proxy)",
-    "gui_settings_meek_lite_expensive_warning": "Aviso: As pontes meek_lite são muito custosas para o Projeto Tor.<br><br>Use-as somente se você não conseguir se conectar a Tor diretamente, via transportadores obfs4 ou outras pontes comuns.",
+    "gui_settings_meek_lite_expensive_warning": "Aviso: as pontes meek_lite são muito custosas para o Projeto Tor.<br><br>Use-as somente se você não conseguir se conectar a Tor diretamente, via transportadores obfs4 ou outras pontes comuns.",
     "gui_settings_tor_bridges_custom_radio_option": "Usar pontes personalizadas",
     "gui_settings_tor_bridges_custom_label": "Você pode obter pontes em <a href=\"https://bridges.torproject.org/options\">https://bridges.torproject.org</a>",
     "gui_settings_tor_bridges_invalid": "Nenhumas ponte adicionada funciona.\nTente usá-las de novo ou adicione outras.",
@@ -112,7 +112,7 @@
     "settings_error_socket_file": "Não foi possível conectar ao controlador Tor usando o arquivo de socket {}.",
     "settings_error_auth": "Conectado a {}:{}, mas não foi possível autenticar. Talvez este não seja um controlador Tor?",
     "settings_error_missing_password": "Conectado ao controlador Tor, mas é preciso ter uma senha para autenticar.",
-    "settings_error_unreadable_cookie_file": "Conectado ao controlador Tor, mas talvez a palavra-passe esteja incorreta, ou o seu usuário não possui autorização para ler o ficheiro de cookie.",
+    "settings_error_unreadable_cookie_file": "Conectado ao controlador Tor, mas talvez a senha esteja incorreta, ou o seu usuário não possui autorização para ler o arquivo de cookie.",
     "settings_error_bundled_tor_not_supported": "Não é possível usar a versão de Tor que vem junto com OnionShare, em modo 'programação', com Windows ou macOS.",
     "settings_error_bundled_tor_timeout": "A conexão a Tor está demorando muito. O seu computado está conectado à Internet e o seu relógio de sistema, ajustado?",
     "settings_error_bundled_tor_broken": "OnionShare não pôde se conectar a Tor em segundo plano:\n{}",
@@ -139,7 +139,7 @@
     "gui_share_url_description": "<b>Qualquer pessoa</b> com este endereço do OnionShare pode <b>baixar</b> seus arquivos usando o <b>Tor Browser</b>: <img src='{}' />",
     "gui_receive_url_description": "<b>Qualquer pessoa</b> com este endereço do OnionShare pode <b>carregar</b> arquivos no seu computador usando o <b>Tor Browser</b>: <img src='{}' />",
     "gui_url_label_persistent": "Este compartilhamento não vai ser encerrado automaticamente.<br><br>Todos os compartilhamentos posteriores reutilizarão este endereço. (Para usar um endereço novo a cada vez, desative a opção \"Usar o mesmo endereço\" nas configurações.)",
-    "gui_url_label_stay_open": "Este compartilhamento não sera encerrado automaticamente.",
+    "gui_url_label_stay_open": "Este compartilhamento não será encerrado automaticamente.",
     "gui_url_label_onetime": "Este compartilhamento será encerrado após completar uma vez.",
     "gui_url_label_onetime_and_persistent": "Este compartilhamento não será encerrado automaticamente.<br><br>Todos os compartilhamentos posteriores reutilizarão este endereço. (Para usar endereços únicos a cada compartilhamento, desative a opção \"Usar o mesmo endereço\" nas configurações.)",
     "gui_status_indicator_share_stopped": "Pronto para compartilhar",
@@ -156,8 +156,8 @@
     "info_completed_uploads_tooltip": "{} upload(s) completado(s)",
     "error_cannot_create_downloads_dir": "Não foi possível a pasta do modo de recepção: {}",
     "receive_mode_downloads_dir": "Os arquivos enviados para você aparecem na seguinte pasta: {}",
-    "receive_mode_warning": "Atenção: O modo de recepção permite que as pessoas enviem arquivos para o seu computador. Alguns arquivos podem tomar o controle do seu computador se você abrí-los. Apenas abra arquivos enviados por pessoas que você confia, ou se você souber o que está fazendo.",
-    "gui_receive_mode_warning": "O modo de recepção permite que pessoas enviem arquivos para o seu computador.<br><br><b>Alguns arquivos podem tomar o controle do seu computador se você abrí-los. Apenas abra arquivos enviados por pessoas que você confia, ou se você souber o que está fazendo.</b>",
+    "receive_mode_warning": "Atenção: O modo de recepção permite que as pessoas enviem arquivos para o seu computador. Alguns arquivos podem tomar o controle do seu computador se você abri-los. Apenas abra arquivos enviados por pessoas que você confia, ou se você souber o que está fazendo.",
+    "gui_receive_mode_warning": "O modo de recepção permite que pessoas enviem arquivos para o seu computador.<br><br><b>Alguns arquivos podem tomar o controle do seu computador se você abri-los. Apenas abra arquivos enviados por pessoas que você confia, ou se você souber o que está fazendo.</b>",
     "receive_mode_upload_starting": "Um upload de tamanho total {} está sendo iniciado",
     "receive_mode_received_file": "Recebido: {}",
     "gui_mode_share_button": "Compartilhar Arquivos",
@@ -183,7 +183,7 @@
     "gui_settings_language_label": "Idioma",
     "gui_settings_language_changed_notice": "Reinicie OnionShare para que sua alteração de idioma tenha efeito.",
     "timeout_upload_still_running": "Esperando o término do upload",
-    "gui_add_files": "Adicionar Documentos",
+    "gui_add_files": "Adicionar Arquivos",
     "gui_add_folder": "Adicionar Pasta",
     "gui_share_mode_no_files": "Nenhum arquivo ainda enviado",
     "gui_connect_to_tor_for_onion_settings": "Conectar ao Tor para ver as configurações do serviço onion",
