Clean ui, add strings, fix web listing logic

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -114,6 +114,7 @@
     "gui_use_legacy_v2_onions_checkbox": "Use legacy addresses",
     "gui_save_private_key_checkbox": "Use a persistent address",
     "gui_share_url_description": "<b>Anyone</b> with this OnionShare address can <b>download</b> your files using the <b>Tor Browser</b>: <img src='{}' />",
+    "gui_website_url_description": "<b>Anyone</b> with this OnionShare address can <b>visit</b> your website using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_receive_url_description": "<b>Anyone</b> with this OnionShare address can <b>upload</b> files to your computer using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_url_label_persistent": "This share will not auto-stop.<br><br>Every subsequent share reuses the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
     "gui_url_label_stay_open": "This share will not auto-stop.",
@@ -168,6 +169,7 @@
     "gui_share_mode_autostop_timer_waiting": "Waiting to finish sending",
     "gui_receive_mode_no_files": "No Files Received Yet",
     "gui_receive_mode_autostop_timer_waiting": "Waiting to finish receiving",
+    "gui_visit_started": "Someone has visited your website {}",
     "receive_mode_upload_starting": "Upload of total size {} is starting",
     "days_first_letter": "d",
     "hours_first_letter": "h",
