--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -147,6 +147,8 @@
     "systray_menu_exit": "Quit",
     "systray_page_loaded_title": "Page Loaded",
     "systray_page_loaded_message": "OnionShare address loaded",
+    "systray_site_loaded_title": "Site Loaded",
+    "systray_site_loaded_message": "OnionShare site loaded",
     "systray_share_started_title": "Sharing Started",
     "systray_share_started_message": "Starting to send files to someone",
     "systray_share_completed_title": "Sharing Complete",
