Clean code and fix UI bugs

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -157,6 +157,8 @@
     "systray_share_canceled_message": "Someone canceled receiving your files",
     "systray_receive_started_title": "Receiving Started",
     "systray_receive_started_message": "Someone is sending files to you",
+    "systray_website_started_title": "Starting sharing website",
+    "systray_website_started_message": "Someone is visiting your website",
     "gui_all_modes_history": "History",
     "gui_all_modes_clear_history": "Clear All",
     "gui_all_modes_transfer_started": "Started {}",
@@ -169,6 +171,7 @@
     "gui_all_modes_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "gui_share_mode_no_files": "No Files Sent Yet",
     "gui_share_mode_autostop_timer_waiting": "Waiting to finish sending",
+    "gui_website_mode_no_files": "No Website Shared Yet",
     "gui_receive_mode_no_files": "No Files Received Yet",
     "gui_receive_mode_autostop_timer_waiting": "Waiting to finish receiving",
     "gui_visit_started": "Someone has visited your website {}",
