Squashed commit of the following:
commit 9a60c8c87f3d9f05ef1a05fc472c94bc22616b49
Author: Hosted Weblate <hosted@weblate.org>
Date:   Sat Jun 22 13:01:49 2019 +0200

    Translated using Weblate (Swedish)
    Translated using Weblate (Catalan)
    Translated using Weblate (Danish)

commit 8083fd49298768d96d33684f65b05a2aa3dddd1c
Author: Hosted Weblate <hosted@weblate.org>
Date:   Thu May 16 17:49:23 2019 +0200

    Translated using Weblate (Hungarian)
    Translated using Weblate (Turkish)
    Translated using Weblate (Telugu)
    Translated using Weblate (Swahili)
    Translated using Weblate (Malay)
    Translated using Weblate (Greek)
    Translated using Weblate (Spanish)
    Added translation using Weblate (Swahili)

commit e0db8944813b3f3c48a2d61a6f12c5ed15dee704
Merge: 543744d a352dbe
Author: emma peel <emma.peel@riseup.net>
Date:   Wed May 8 10:04:34 2019 +0000

    Merge branch 'develop' of github.com:weblate/onionshare-weblate into develop

commit 543744d81dca1b0f75724083d073fe66fb0e6c0e
Author: Hosted Weblate <hosted@weblate.org>
Date:   Tue May 7 23:16:35 2019 +0200

    Translated using Weblate (German)

commit 574a0c395318d7f3aeca3c7b9ef8556d22178cfe
Author: Hosted Weblate <hosted@weblate.org>
Date:   Wed May 8 09:42:39 2019 +0200

    Translated using Weblate (Romanian)
    Translated using Weblate (Italian)
    Translated using Weblate (German)
    Translated using Weblate (Dutch)
    Translated using Weblate (Catalan)
    Translated using Weblate (Romanian)
    Translated using Weblate (Italian)
    Translated using Weblate (German)
    Translated using Weblate (German)
    Translated using Weblate (German)
    Translated using Weblate (Turkish)
    Translated using Weblate (Greek)
    Translated using Weblate (German)
    Translated using Weblate (French)
    Translated using Weblate (Arabic)
    Translated using Weblate (Turkish)
    Translated using Weblate (Turkish)
    Translated using Weblate (German)
commit a352dbe9ff3bd54904cbb4cf715ab5341a1

--- a/share/locale/de.json
+++ b/share/locale/de.json
@@ -3,7 +3,7 @@
     "give_this_url": "Gib diese URL an den Empfänger:",
     "ctrlc_to_stop": "Drücke Strg+C um den Server anzuhalten",
     "not_a_file": "{0:s} ist keine gültige Datei.",
-    "other_page_loaded": "URL geladen",
+    "other_page_loaded": "Daten geladen",
     "closing_automatically": "Gestoppt, da die Übertragung erfolgreich beendet wurde",
     "large_filesize": "Warnung: Das Hochladen von großen Dateien kann sehr lange dauern",
     "help_local_only": "Tor nicht verwenden (nur für Entwicklung)",
@@ -49,7 +49,7 @@
     "give_this_url_receive": "Gib diese URL dem Sender:",
     "give_this_url_receive_stealth": "Gib diese URL und die HidServAuth-Zeile an den Sender:",
     "not_a_readable_file": "{0:s} ist eine schreibgeschützte Datei.",
-    "no_available_port": "Es konnte kein freier Port gefunden werden, um den Verteilservice zu starten",
+    "no_available_port": "Es konnte kein freier Port gefunden werden, um den Verteildienst zu starten",
     "close_on_autostop_timer": "Angehalten da der Stoptimer abgelaufen ist",
     "systray_upload_started_title": "OnionShare Upload wurde gestartet",
     "systray_upload_started_message": "Ein Benutzer hat begonnen, Dateien auf deinen Computer hochzuladen",
@@ -79,7 +79,7 @@
     "help_stealth": "Nutze Klientauthorisierung (fortgeschritten)",
     "gui_receive_start_server": "Empfangsmodus starten",
     "gui_receive_stop_server": "Empfangsmodus stoppen",
-    "gui_receive_stop_server_autostop_timer": "Empfängermodus stoppen (stoppt automatisch in {} Sekunden)",
+    "gui_receive_stop_server_autostop_timer": "Empfängermodus stoppen ({} verbleibend)",
     "gui_receive_stop_server_autostop_timer_tooltip": "Zeit läuft in {} ab",
     "gui_no_downloads": "Bisher keine Downloads",
     "gui_copied_url_title": "OnionShare-Adresse kopiert",
@@ -218,7 +218,7 @@
     "gui_settings_autostart_timer": "Teilen starten bei:",
     "gui_waiting_to_start": "Geplant in {} zu starten. Klicken zum Abbrechen.",
     "gui_stop_server_autostop_timer_tooltip": "Stoptimer endet um {}",
-    "gui_start_server_autostart_timer_tooltip": "Starttimer endet um {}",
+    "gui_start_server_autostart_timer_tooltip": "Automatischer Stoptimer endet um {}",
     "gui_server_autostart_timer_expired": "Die geplante Zeit ist bereits vergangen. Bitte aktualisieren um das Teilen zu starten.",
     "gui_autostop_timer_cant_be_earlier_than_autostart_timer": "Die Stopzeit kann nicht gleich oder früher als die Startzeit sein. Bitte aktutalisieren um das Teilen zu starten.",
     "gui_status_indicator_share_scheduled": "Geplant…",
