Register a history item when an individual file is viewed that does not match a 'reserved' path

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -160,6 +160,8 @@
     "systray_receive_started_message": "Someone is sending files to you",
     "systray_website_started_title": "Starting sharing website",
     "systray_website_started_message": "Someone is visiting your website",
+    "systray_individual_file_downloaded_title": "Individual file loaded",
+    "systray_individual_file_downloaded_message": "Individual file {} viewed",
     "gui_all_modes_history": "History",
     "gui_all_modes_clear_history": "Clear All",
     "gui_all_modes_transfer_started": "Started {}",
@@ -176,6 +178,7 @@
     "gui_receive_mode_no_files": "No Files Received Yet",
     "gui_receive_mode_autostop_timer_waiting": "Waiting to finish receiving",
     "gui_visit_started": "Someone has visited your website {}",
+    "gui_individual_file_download": "Viewed {}",
     "receive_mode_upload_starting": "Upload of total size {} is starting",
     "days_first_letter": "d",
     "hours_first_letter": "h",
